fix(web-components): update radio group to use resize observer
Update radio group to use resize observer to ensure horizontal orientation doesn't cut off radio
options

. #1055

--- a/packages/web-components/src/components/ic-radio-group/ic-radio-group.css
+++ b/packages/web-components/src/components/ic-radio-group/ic-radio-group.css
@@ -24,7 +24,7 @@ ic-input-label ic-typography {
   margin-bottom: calc(var(--ic-space-sm) / 2);
 }
 
-.radio-buttons-container {
+:host .radio-buttons-container {
   display: flex;
   flex-direction: column;
   gap: var(--ic-space-xxs);
@@ -34,12 +34,12 @@ ic-input-label ic-typography {
   gap: var(--ic-space-xxxs);
 }
 
-:host([orientation="horizontal"]) .radio-buttons-container {
+:host .radio-buttons-container.horizontal {
   display: flex;
   flex-direction: row;
   gap: calc(var(--ic-space-xl) + var(--ic-space-xs));
 }
 
-:host(.small[orientation="horizontal"]) .radio-buttons-container {
+:host(.small) .radio-buttons-container.horizontal {
   gap: var(--ic-space-xl);
 }
